--- a/config.json
+++ b/config.json
@@ -104,7 +104,7 @@
         "台湾",
         "日本",
         "新加坡",
-        "{all}"
+        "手动切换"
       ]
     },
     {
@@ -115,7 +115,7 @@
         "台湾",
         "日本",
         "新加坡",
-        "{all}"
+        "手动切换"
       ]
     },
     {
@@ -126,7 +126,7 @@
         "台湾",
         "日本",
         "新加坡",
-        "{all}"
+        "手动切换"
       ]
     },
     {
@@ -137,7 +137,7 @@
         "台湾",
         "日本",
         "新加坡",
-        "{all}"
+        "手动切换"
       ]
     },
     {
@@ -148,7 +148,7 @@
         "台湾",
         "日本",
         "新加坡",
-        "{all}"
+        "手动切换"
       ]
     },
     {
@@ -159,7 +159,7 @@
         "台湾",
         "日本",
         "新加坡",
-        "{all}"
+        "手动切换"
       ]
     },
     {
@@ -170,7 +170,7 @@
         "台湾",
         "日本",
         "新加坡",
-        "{all}"
+        "手动切换"
       ]
     },
     {
@@ -181,9 +181,10 @@
         "台湾",
         "日本",
         "新加坡",
-        "{all}"
+        "手动切换"
       ]
     },
+    { "tag": "手动切换", "type": "selector", "outbounds": ["{all}"]},
     {
       "tag": "香港",
       "type": "urltest",
@@ -229,7 +230,7 @@
     {
       "tag": "新加坡",
       "type": "urltest",
-      "outbounds": ["{all}"],
+      "outbounds": ["手动切换"],
       "filter": [
         {
           "action": "include",
@@ -248,7 +249,7 @@
         "台湾",
         "日本",
         "新加坡",
-        "{all}"
+        "手动切换"
       ]
     },
     {
